--- a/app/globals.css
+++ b/app/globals.css
@@ -2,3 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+@keyframes wiggle {
+    0% , 100% {
+        transform: rotate(0deg);
+    }
+    50% {
+        transform: rotate(2deg);
+    }
+}
+
+.wiggle-animation{
+    animation:  wiggle 1.5s  ease-in-out infinite;
+}
